--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.7",
+    "@types/node-fetch": "^2.5.7",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.5"
   }
